# update_tools

./: .gitmodules  CMakeLists.txt  dmg_spec.json  icon.icns  macos_release.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  update_tools.pro  upgradeThread.cpp  upgradeThread.h  usbdevicelistmodel.cpp  usbdevicelistmodel.h
i18n/: update_tools_la.zh_Hans_CN.ts
